# worldbuildingenginev0.01

./: .gitignore  AGENTS.md  CORE_OF_THE_GAME.md  GAME_DETAILS_AND_PLANNING.md  README.md  ROADMAP.md  engine_flowchart.gv  mypy.ini  out.gv  pyproject.toml  worldengine.py  worldengine_flow.gv
saves/: heroes.json  legend.json  lucidus.json  maheirket.json  test_world.json
tests/: __init__.py  test_smoke.py
worldbuildingengine/: __init__.py  constants.py  display.py  entities.py  generation.py  main.py  migrations.py  oracle.py  recruitment.py  save_load.py  types.py
